// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`/api/tryon Integration Tests POST /api/tryon - Validation Error Cases should return 400 for empty apparelImages array 1`] = `
[
  {
    "field": "modelImage",
    "message": "Invalid base64 image data",
  },
  {
    "field": "apparelImages",
    "message": "At least one apparel image required",
  },
]
`;

exports[`/api/tryon Integration Tests POST /api/tryon - Validation Error Cases should return 400 for invalid base64 data 1`] = `
[
  {
    "field": "modelImage",
    "message": "Invalid base64 image data",
  },
  {
    "field": "apparelImages.0",
    "message": "Invalid base64 image data",
  },
]
`;

exports[`/api/tryon Integration Tests POST /api/tryon - Validation Error Cases should return 400 for missing apparelImages with Zod error 1`] = `
[
  {
    "field": "modelImage",
    "message": "Invalid base64 image data",
  },
  {
    "field": "apparelImages",
    "message": "Required",
  },
]
`;

exports[`/api/tryon Integration Tests POST /api/tryon - Validation Error Cases should return 400 for missing modelImage 1`] = `
[
  {
    "field": "modelImage",
    "message": "Required",
  },
  {
    "field": "apparelImages.0",
    "message": "Invalid base64 image data",
  },
]
`;
